tests/errors/test_33.x
// Wrong type for element in array initializer

let x: int[] = ['a', true, 19];

fn main() -> int {}